# lang-plugin-openjdk

./: .gitignore  CMakeLists.txt  README.md  SConscript_openjdk  build_plugin_installer_helper.py  uninstall_plugin.py
api/: APITestGo.java  APITestPython3.java  CMakeLists.txt  Caller.java  MetaFFIModule.java  MetaFFIRuntime.java  SConscript_api-openjdk
api/tests/: run_api_tests.py
api/tests/extended/go/bytearrays/: BytesPrinter.go  BytesPrinter.java  build_metaffi.py  go.mod
api/tests/extended/go/gomcache/: GoMCacheTest.java
api/tests/extended/python3/beautifulsoup/: BeautifulSoupTest.java
api/tests/extended/python3/collections/: CollectionsTest.java
api/tests/extended/python3/complex-primitives/: ComplexPrimitivesTest.java  extended_test.py
api/tests/extended/python3/numpy/: NumpyTest.java
api/tests/extended/python3/pandas/: PandasTest.java
api/tests/python3/: runtime_test_target.py
api/tests/sanity/: APITestGo.java  APITestPython3.java
api/tests/sanity/go/: go.mod
api/tests/sanity/python3/: runtime_test_target.py
compiler/: CMakeLists.txt  Compiler.go  CompilerGuest_test.go  CompilerGuest_testHelper.go  CompilerHost_test.go  Compiler_test.go  GuestCompiler.go  GuestTemplate.go  HostCompiler.go  HostTemplate.go  MetaFFIHostTemplate.go  ModernHostCompiler.go  ModernHostCompiler_test.go  PluginMain.go  TemplateFunctions.go  TestModule.java  TypeConversion.go  compiler_api.cpp  go.mod  jvm_compiler_plugin.cpp  jvm_compiler_plugin.h  openjdk_compiler_thoughts.mdc
compiler/temp_host/: HostTest.java
compiler/test/: CMakeLists.txt
compiler/test/src/: HostCompilerE2ETest.java
idl/: BytecodeExtractor.java  CMakeLists.txt  ClassInfo.java  ClassesExtractor.go  Extractor.java  JarExtractor.java  JavaExtractor.go  JavaExtractor.java  JavaExtractor.json  JavaIDLCompiler.go  JavaIDLCompilerWindows_test.go  JavaIDLCompiler_test.go  JavaInfo.java  JavaSourceExtractor.java  MethodInfo.java  ParameterInfo.java  VariableInfo.java  build.sh  go.mod  jvm_idl_plugin.cpp  openjdk_idl_plugin.cpp
idl/javaextractor/: JavaExtractor_MetaFFIHost.go  MetaFFIGoHostCommon.go  _MetaFFIHost.go
idl/src/java_extractor/: BytecodeExtractor.java  ClassInfo.java  Extractor.java  JarExtractor.java  JavaExtractor.java  JavaInfo.java  MethodInfo.java  ParameterInfo.java  VariableInfo.java
idl/test/cpp/: openjdk_idl_plugin_test.cpp
idl/test/java_extractor/: BytecodeExtractorTest.java  JarExtractorTest.java
idl/test/testdata/: AllVariantsTest.java
runtime/: CMakeLists.txt  HostTest.java  SConscript_conandeps  SConscript_xllr-openjdk  api.cpp  api.h  argument_definition.cpp  argument_definition.h  cdts_java.cpp  cdts_java.h  cdts_java_test.cpp  cdts_java_wrapper.cpp  cdts_java_wrapper.h  class_loader.cpp  class_loader.h  classes_repository.cpp  classes_repository.h  conanfile.txt  contexts.h  exception_macro.h  jarray_wrapper.cpp  jarray_wrapper.h  jboolean_wrapper.cpp  jboolean_wrapper.h  jbyte_wrapper.cpp  jbyte_wrapper.h  jchar_wrapper.cpp  jchar_wrapper.h  jdouble_wrapper.cpp  jdouble_wrapper.h  jfloat_wrapper.cpp  jfloat_wrapper.h  jint_wrapper.cpp  jint_wrapper.h  jlong_wrapper.cpp  jlong_wrapper.h  jni_caller.cpp  jni_caller.h  jni_class.cpp  jni_class.h  (+24 more)
runtime/test/: TestRuntime.java
test/: CMakeLists.txt  jvm_test_env.cpp  jvm_test_env.h  jvm_wrappers.cpp  jvm_wrappers.h  test_arrays.cpp  test_callbacks.cpp  test_classes.cpp  test_collections.cpp  test_core.cpp  test_errors.cpp  test_third_party.cpp
xllr-jvm-bridge/: CMakeLists.txt  Caller.java  MetaFFIBridge.java  MetaFFITypeInfo.java  metaffi_bridge.cpp
xllr-openjdk-bridge/: CMakeLists.txt  CallResult.java  Caller.java  MetaFFIBridge.java  MetaFFIException.java  MetaFFIHandle.java  MetaFFITypeWithAlias.java  ObjectLoader.java  OpenFFIException.java  SConscript_bridge-openjdk  SConscript_conandeps  XLLR.java  metaffi_XLLR.cpp  metaffi_XLLR.h  metaffi_bridge.cpp  metaffi_bridge.h  openffi_XLLR.cpp  openffi_XLLR.h
